@@ -88,12 +88,12 @@ jQuery( function( $ ) {
 			var email    = source.owner.email;
 			var phone    = source.owner.phone;
 			var billing  = source.owner.address;
-			var name     = source.owner.name;
+			var name     = source.owner.name ?? evt.payerName;
 			var shipping = evt.shippingAddress;
 			var data     = {
 				_wpnonce:                  wc_stripe_payment_request_params.nonce.checkout,
-				billing_first_name:        null !== name ? name.split( ' ' ).slice( 0, 1 ).join( ' ' ) : '',
-				billing_last_name:         null !== name ? name.split( ' ' ).slice( 1 ).join( ' ' ) : '',
+				billing_first_name:        name?.split( ' ' )?.slice( 0, 1 )?.join( ' ' ) ?? '',
+				billing_last_name:         name?.split( ' ' )?.slice( 1 )?.join( ' ' ) ?? '',
 				billing_company:           '',
 				billing_email:             null !== email   ? email : evt.payerEmail,
 				billing_phone:             null !== phone   ? phone : evt.payerPhone && evt.payerPhone.replace( '/[() -]/g', '' ),
